--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap');
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+@theme {
+	--color-accent-500: #0093c9;
+	--color-accent-600: #006c9c;
+	--color-accent-700: #004d70;
+}
+
+@font-face {
+	font-family: 'Grifter';
+	font-style: bold;
+	font-weight: 700;
+	font-display: block;
+	src: url('/fonts/grifterbold.otf') format('opentype');
+}
+
+@layer base {
+	h1,
+	h2,
+	h3 {
+		font-family: 'Grifter', sans-serif;
+		text-transform: uppercase;
+		letter-spacing: 0.1rem;
+		color: #0093c9;
+	}
+	.button-base {
+		@apply text-accent-700 flex cursor-pointer items-center justify-center gap-3 rounded-lg bg-gray-100 p-3 px-4 font-['Grifter'] text-lg font-bold tracking-wider transition-transform hover:scale-105;
+	}
+	h1 {
+		font-size: 3rem;
+	}
+	h2 {
+		font-size: 2rem;
+	}
+	h3 {
+		font-size: 1.5rem;
+	}
+	body {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-family: 'Alegreya', serif;
+		background-color: black;
+		color: white;
+		font-size: large;
+	}
+}
