--- a/src/app.css
+++ b/src/app.css
@@ -38,6 +38,12 @@
 	h3 {
 		font-size: 1.5rem;
 	}
+	.cool-title {
+		@apply bg-linear-to-t from-white/50 to-white to-60% bg-clip-text text-transparent text-shadow-black/10 text-shadow-lg;
+	}
+	.glass-bg {
+		@apply rounded-3xl border-t border-r border-b border-t-white/50 border-r-white/30 border-b-white/10 bg-linear-30 from-white/5 to-white/30 shadow shadow-black/20;
+	}
 	body {
 		width: 100%;
 		display: flex;
@@ -45,7 +51,7 @@
 		justify-content: center;
 		align-items: center;
 		font-family: 'Alegreya', serif;
-		background-color: black;
+		background-color: #006685;
 		color: white;
 		font-size: large;
 	}
