--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
@@ -27,7 +27,7 @@
 		color: #0093c9;
 	}
 	.button-base {
-		@apply text-accent-700 flex cursor-pointer items-center justify-center gap-3 rounded-lg bg-gray-100 p-3 px-4 font-['Grifter'] text-lg font-bold tracking-wider transition-transform hover:scale-105;
+		@apply text-accent-700 flex cursor-pointer items-center justify-center gap-3 rounded-full bg-gray-300 p-3 px-4 font-['Grifter'] text-lg font-bold tracking-wider shadow-[inset_0_-2px_3px,0_1px_3px] inset-shadow-sm shadow-black/40 inset-shadow-white transition-transform hover:scale-105;
 	}
 	h1 {
 		font-size: 3rem;
@@ -41,8 +41,29 @@
 	.cool-title {
 		@apply bg-linear-to-t from-white/50 to-white to-60% bg-clip-text text-transparent text-shadow-black/10 text-shadow-lg;
 	}
+	.cool-title-negative {
+		@apply from-accent-700 bg-linear-to-t to-gray-400 to-60% bg-clip-text text-transparent text-shadow-black/10 text-shadow-lg;
+	}
 	.glass-bg {
-		@apply rounded-3xl border-t border-r border-b border-t-white/50 border-r-white/30 border-b-white/10 bg-linear-30 from-white/5 to-white/30 shadow shadow-black/20;
+		@apply rounded-3xl border-b-white/10 bg-white/10 shadow-[0_1px_3px_0_rgba(0,0,0,0.1),inset_0_-3px_3px_rgba(0,0,0,1)] inset-shadow-xs shadow-black/20 inset-shadow-white/60;
+	}
+	.glass-bgBACKUP {
+		@apply rounded-3xl border-b-white/10 bg-linear-30 from-white/5 to-white/30 shadow inset-shadow-sm shadow-black/20 inset-shadow-white/60;
+	}
+	.inset-button {
+		@apply rounded-full bg-black/5 shadow-[inset_0_-2px_2px_rgba(255,255,255,0.3),inset_0_4px_6px_rgba(0,0,0,0.3)];
+	}
+	.high-button {
+		@apply rounded-full bg-white/5 shadow-[0_3px_5px_rgba(0,0,0,0.2),inset_0_-2px_3px_rgba(0,0,0,0.3)] inset-shadow-xs inset-shadow-white/50;
+	}
+	.progress-bar {
+		@apply min-h-3 rounded-full bg-linear-to-t from-[#bba200] to-[#ffff99] shadow inset-shadow-xs shadow-black/30 inset-shadow-white;
+	}
+	.progress-bar-full {
+		@apply min-h-3 rounded-full bg-linear-to-t from-[#565] to-[#cdc] shadow inset-shadow-xs shadow-black/30 inset-shadow-white;
+	}
+	.progress-bar-fullBACKUP {
+		@apply min-h-3 rounded-full bg-linear-to-t from-[#555] to-[#ccc] shadow inset-shadow-xs shadow-black/30 inset-shadow-white;
 	}
 	body {
 		width: 100%;
@@ -50,9 +71,9 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		font-family: 'Alegreya', serif;
+		font-family: 'JetBrains Mono', monospace;
 		color: white;
-		font-size: large;
-		@apply bg-[url('/assets/background3.png')] bg-fixed;
+		/* @apply bg-[url('/assets/background3.png')] bg-fixed; */
+		@apply bg-stone-800;
 	}
 }
